--- a/install/docker/html/index.html
+++ b/install/docker/html/index.html
@@ -1,5 +1,6 @@
 <html>
     <meta source="tcn.ng.2025" />
     Welcome to your new Flyton project
-    <br>V 2025.12.23.10:00
+    <br>V 2025.12.24.14:00
+    <br><br><a href=/pages/login/>Login</a>
 </html>
