--- a/client/pages/login/fly_index.html
+++ b/client/pages/login/fly_index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="copyrights" content="yaweli" />
     <title></title>
-    <!-- Include Bootstrap CSS -->
     <link href="../../lib/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* Custom styles (if needed) */
         body {
             background-color: #f9f9f9;
             font-family: Arial, sans-serif;
@@ -30,6 +29,7 @@
     
     
     <script>
+
 /* global go_green */
 /* global go_red */
 /* global go_el */
